RESOLVED FIXED269432
UnifiedPDF: Crash when clicking on form fields
https://bugs.webkit.org/show_bug.cgi?id=269432
Summary UnifiedPDF: Crash when clicking on form fields
Tim Horton
Reported 2024-02-14 20:27:37 PST
v
Attachments
Radar WebKit Bug Importer
Comment 1 2024-02-14 20:27:56 PST
Tim Horton
Comment 2 2024-02-14 20:29:24 PST
EWS
Comment 3 2024-02-14 20:39:11 PST
Committed 274698@main (a41e91d3c971): <https://commits.webkit.org/274698@main> Reviewed commits have been landed. Closing PR #24479 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.