UnifiedPDF: Crash when clicking on form fields https://bugs.webkit.org/show_bug.cgi?id=269432 rdar://122989423

Reviewed by Richard Robinson.

* Source/WebKit/WebProcess/Plugins/PDF/PDFPluginTextAnnotation.mm:
(WebKit::PDFPluginTextAnnotation::createAnnotationElement):
Don't use setValue() because element() is still null at this point.

Canonical link: https://commits.webkit.org/274698@main